[package]
name = "begonia"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]

categories = [ "authentication", "os" ]
description = "TUI display manager"
documentation = "https://docs.rs/begonia"
edition = "2018"
homepage = "https://github.com/lovesegfault/begonia"
keywords = [ "display", "manager", "tui", "linux", "logind" ]
license = "BSD-3-Clause"
maintenance = { status = "actively-developed" }
readme = "./README.md"
repository = "https://github.com/lovesegfault/begonia"

[dependencies]
