[package]
name = "begonia"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]

categories = [ "command-line-utilities", "multimedia", "multimedia::encoding", "multimedia::audio" ]
description = "Advanced Music Manager"
documentation = "https://docs.rs/begonia"
edition = "2018"
homepage = "https://github.com/lovesegfault/begonia"
keywords = [ "music", "manager", "cli", "discogs", "beets" ]
license = "BSD-3-Clause"
maintenance = { status = "actively-developed" }
readme = "./README.md"
repository = "https://github.com/lovesegfault/begonia"

[dependencies]
reqwest = "0.10.4"
